--- a/index.html
+++ b/index.html
@@ -91,14 +91,14 @@
     </div>
 </div>
 
-    <div class="text-center mt-5  mx-5 rounded-4 position-relative" id="VER">
-        <img src="Images/img2.jpg" class="rounded-4" alt="">
+    <div class="text-center mt-5  mx-5 rounded-4 position-relative " id="VER">
+        <img src="Images/img2.jpg" class="rounded-4 " alt="">
         <button class="rounded-4 position-absolute top-50 start-50 translate-middle  btn_ver "><a class="text-decoration-none text-dark fs-3 " href="https://www.youtube.com/watch?v=8G5D330xNFg&ab_channel=LoqueseaNoimporta"> <span> VER AHORA | ESPAÑOL | 720P</span> <svg xmlns="http://www.w3.org/2000/svg" width="30" height="40" fill="currentColor" class="bi bi-play-btn-fill mb-1" viewBox="0 0 16 16">
             <path d="M0 12V4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2zm6.79-6.907A.5.5 0 0 0 6 5.5v5a.5.5 0 0 0 .79.407l3.5-2.5a.5.5 0 0 0 0-.814l-3.5-2.5z"/>
           </svg></a></button>    
     </div>
 
-<div class="mx-5 rounded bg_especial" id="RESEÑAS">
+<div class="mx-5 mb-3 rounded bg_especial" id="RESEÑAS">
     <h1 class="text-center mt-5 mb-0" style="font-size: 4rem;">Reseñ<span class="span_2">a</span>s</h1>
     <div class="d-flex flex-wrap justify-content-center"> 
 
@@ -163,6 +163,14 @@
         </div>
     </div>
 </div>
+
+<footer class="bg-dark ">
+    <ul class="text-white">
+        <li>1</li>
+        <li>2</li>
+        <li>3</li>
+    </ul>
+</footer>
 
 
 
