--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
           </svg></a></button>    
     </div>
 
-<div class="mx-5 mb-3 rounded bg_especial" id="RESEÑAS">
+<div class="mx-5 mb-5 rounded bg_especial" id="RESEÑAS">
     <h1 class="text-center mt-5 mb-0" style="font-size: 4rem;">Reseñ<span class="span_2">a</span>s</h1>
     <div class="d-flex flex-wrap justify-content-center"> 
 
@@ -164,12 +164,14 @@
     </div>
 </div>
 
-<footer class="bg-dark ">
-    <ul class="text-white">
-        <li>1</li>
-        <li>2</li>
-        <li>3</li>
+<footer class="py-3 my-4 bg_especial  position-relative">
+    <ul class="nav justify-content-center  border-bottom pb-4 mb-3">
+        <li class="nav-item position-absolute start-0 top-0">  <img src="Images/logo.png" width="150px" alt="">   </li>
+        <li class="nav-item">  <a href="#" class="nav-link px-2 text-muted">Ver más</a>   </li>
+        <li class="nav-item">  <a href="#" class="nav-link px-2 text-muted">Buscar</a>   </li>
+        <li class="nav-item">  <a href="#" class="nav-link px-2 text-muted">Otros</a>   </li>
     </ul>
+    <p class="text-center text-muted">Esta pagina fue creada en tributo a la pelicula Chappie</p>
 </footer>
 
 
